FEAT : swiper and burger menu

--- a/workflow/src/styles/utils/_fonts.scss
+++ b/workflow/src/styles/utils/_fonts.scss
@@ -42,3 +42,48 @@
     src:url("../assets/fonts/PPNeueMontreal-BoldItalic.woff2") format("woff2"),
         url("../assets/fonts/PPNeueMontreal-BoldItalic.woff") format("woff");
 }
+
+@font-face {
+    font-family: "Eiko";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src:url("../assets/fonts/PPEiko-Regular.woff2") format("woff2"),
+        url("../assets/fonts/PPEiko-Regular.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Eiko";
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src:url("../assets/fonts/PPEiko-Medium.woff2") format("woff2"),
+        url("../assets/fonts/PPEiko-Medium.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Eiko";
+    font-style: italic;
+    font-weight: 500;
+    font-display: swap;
+    src:url("../assets/fonts/PPEiko-MediumItalic.woff2") format("woff2"),
+        url("../assets/fonts/PPEiko-MediumItalic.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Eiko";
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src:url("../assets/fonts/PPEiko-Black.woff2") format("woff2"),
+        url("../assets/fonts/PPEiko-Black.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Eiko";
+    font-style: italic;
+    font-weight: 700;
+    font-display: swap;
+    src:url("../assets/fonts/PPEiko-BlackItalic.woff2") format("woff2"),
+        url("../assets/fonts/PPEiko-BlackItalic.woff") format("woff");
+}
