--- a/workflow/src/styles/components/_footer.scss
+++ b/workflow/src/styles/components/_footer.scss
@@ -5,7 +5,7 @@
     color: $white;
 
     .container{
-        padding: 48px 0;
+        padding: 48px;
     }
 
     &__top{
@@ -55,7 +55,7 @@
         display: flex;
         flex-direction: column;
         gap: 6px;
-        font-size: 24px;
+        font-size: $xsDesktop;
         font-weight: 500;
 
         a{
@@ -75,7 +75,7 @@
                 background-color: $yellow;
                 transform: scale(0, 0);
                 transform-origin: center;
-                transition: transform 0.2s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+                transition: transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
             }
 
             &:hover {
@@ -94,8 +94,7 @@
 
         a{
             color: $white;
-            font-size: 14px;
-            font-weight: 500;
+            font-size: $fontsizeSmall;
             text-transform: uppercase;
             text-decoration: none;
             padding: 12px 0;
@@ -125,7 +124,14 @@
 }
 
 .copyright{
-    text-transform: uppercase;
     grid-column: 1 / 4;
+    color: $darkgrey;
+    font-size: $fontsizeSmall;
+    margin: auto 0;
+
+    span{
+        color: $white;
+        text-transform: uppercase;
+    }
 }
 
