--- a/workflow/src/styles/components/_header.scss
+++ b/workflow/src/styles/components/_header.scss
@@ -1,1 +1,293 @@
 @import 'utils/variables';
+
+.header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+
+    .container{
+        padding: 0;
+        position: relative;
+    }
+}
+
+.last{
+    grid-column: 1 / 3;
+    margin-top: auto;
+    padding-bottom: 48px;
+
+    small{
+        display: block;
+        color: $lightgrey;
+        font-size: $fontsizeSmall;
+        margin-bottom: 12px;
+    }
+
+    img{
+        width: 100%;
+        border-radius: 16px;
+    }
+}
+
+@keyframes menu{
+    0%{
+        transform: translateY(-100%);
+    }
+
+    100%{
+        transform: translateY(0);
+    }
+}
+
+.menu{
+    margin: 48px 48px 0 48px;
+    display: flex;
+    justify-content: space-between;
+
+    &__burger{
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100vw;
+        right: -100%;
+    }
+
+    &__main{
+        position: absolute;
+        display: grid;
+        grid-template-columns: repeat(9, 1fr);
+        column-gap: 24px;
+        background-color: $black;
+        padding: 120px 48px 0 48px;
+        border-top: 1px solid $darkgrey;
+        box-shadow: 0 0 12px $black;
+        z-index: 12;
+    }
+
+    &__more{
+        position: absolute;
+        display: grid;
+        background-color: $yellow;
+        grid-template-columns: repeat(9, 1fr);
+        column-gap: 24px;
+        padding: 24px 48px;
+        width: calc(100% - 96px);
+        box-shadow: 0 0 12px $black;
+        z-index: 11;
+
+        p{
+            grid-column: 1 / 6;
+            display: flex;
+            align-items: flex-end;
+            font-size: $lgDesktop;
+            line-height: .7;
+            color: $black;
+            margin: 0;
+        }
+
+        .list{
+            &__media{
+                grid-column: 6 / 10;
+                display: flex;
+                align-items: flex-end;
+                gap: 48px;
+        
+                a{
+                    color: $black;
+                    font-size: $fontsizeSmall;
+                    text-transform: uppercase;
+                    text-decoration: none;
+                    padding: 12px 0;
+                    position: relative;
+        
+                    &:after {
+                        content:'';
+                        position: absolute;
+                        width: 100%;
+                        height: 1px;
+                        bottom: 10px;
+                        left: 0;
+                        background-color: $black;
+                        transform: scaleX(0);
+                        transform-origin: bottom right;
+                        transition: transform 0.3s;
+                    }
+        
+                    &:hover {
+                        &:after {
+                            transform-origin: bottom left;
+                            transform: scaleX(1);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.author{
+    grid-column: 3 / 6;
+    color: $lightgrey;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    border-right: 1px solid $darkgrey;
+    padding-bottom: 48px;
+
+    &__lastname{
+        font-family: "Eiko", serif;
+        font-style: italic;
+    }
+
+    &__tasks{
+        overflow: hidden;
+        height: $mdDesktop;
+    }
+}
+
+.nav{
+    grid-column: 6 / 10;
+    padding-bottom: 192px;
+
+    &__list{
+        counter-reset: li;
+    }
+
+    &__element{
+        display: flex;
+        overflow: hidden;
+        align-items: center;
+
+        &:before{
+            counter-increment: li;
+            content: counter(li, decimal-leading-zero);
+            color: $lightgrey;
+	        margin-right: 24px;
+            font-size: $fontsizeSmall;
+        }
+
+        &--link{
+            font-size: $smDesktop;
+            font-weight: 500;
+            //line-height: $lineheightTitle;
+            color: $lightgrey;
+            text-decoration: none;
+            position: relative;
+            overflow: hidden;
+
+            span{
+                display: block;
+                transition: transform .3s cubic-bezier(.16,1,.3,1);
+                padding-right: 48px;
+            }
+
+            span:after{
+                content: attr(data-hover);
+                color: $white;
+                font-family: "Eiko", serif;
+                font-style: italic;
+                display: block;
+                position: absolute;
+                top: 100%;
+            }
+
+            &:hover{
+                span{
+                    transform: translateY(-100%);
+                }
+            }
+        }
+
+        &--actif{
+            span{
+                transform: translateY(-100%);
+            }
+        }
+    }
+}
+
+.btn{
+    &--menu{
+        width: 32px;
+        height: 48px;
+        z-index: 11;
+
+        span{
+            margin: 0 auto;
+            position: relative;
+
+            &:before, &:after {
+                position: absolute;
+                content: '';
+                width: 32px;
+                height: 2px;
+                background-color: $white;
+                display: block;
+                transition: margin .2s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+            }
+
+            &:before{
+                margin: -3px 0 0;
+            }
+
+            &:after{
+                margin: 3px 0 0;
+            }
+        }
+        
+        &:hover{
+            span:before{
+                margin: -6px 0 0;
+            }
+
+            span:after{
+                margin: 6px 0 0;
+            }
+        }
+    }
+}
+
+.open{
+    span{
+        transition-delay: .3s;
+
+        &:before, &:after{
+            transition-property: margin, transform;
+            transition-duration: .3s;
+            transition-delay: .3s, 0;
+        }
+
+        &:before{
+            margin-top: 0;
+            transform: rotate(45deg);
+            transition-delay: 0, .3s;
+        }
+
+        &:after{
+            margin-top: 0;
+            transform: rotate(-45deg);
+            transition-delay: 0, .3s;
+        }
+    }
+
+    &:hover{
+        span:before{
+            margin: 0;
+        }
+
+        span:after{
+            margin: 0;
+        }
+    }
+}
+
+body[data-menu]{
+    .menu{
+        &__burger{
+            position: fixed;
+            top: 0;
+            right: 0%;
+        }
+    }
+}
