--- a/workflow/src/styles/main.scss
+++ b/workflow/src/styles/main.scss
@@ -1,13 +1,40 @@
 @import 'utils/variables';
 @import 'utils/fonts';
+@import 'utils/text';
 @import 'components/header';
 @import 'components/footer';
+
+html{
+    font-size: 62.5%;
+}
 
 body{
     margin: 0;
     padding: 0;
     font-family: "Neue Montreal", sans-serif;
     line-height: $lineheightContent;
+    overflow-x: hidden;
+    overflow-y: overlay;
+}
+
+::selection{
+    background-color: $yellow;
+    color: $black;
+}
+    
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+    background: rgba(0,0,0,.4);
+    border-radius: 8px;
+    border: 3px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-track{
+    display: none;
 }
 
 .list{
@@ -16,13 +43,287 @@ body{
     padding: 0;
 }
 
+.btn{
+    padding: 0;
+    margin: 0;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+    text-decoration: none;
+    font-family: "Neue Montreal", sans-serif;
+
+    &--contact{
+        padding: 8px 24px;
+        text-transform: uppercase;
+        font-size: 2.4rem;
+        color: $white;
+        border-radius: 50px;
+        background-color: $black;
+
+        &:hover{
+            .svg{
+                transform: translateX(8px);
+            }
+        }
+    }
+}
+
 .container{
-    margin: 0 96px;
+    padding: 0 48px;
 }
 
 .section{
+    &--swiper{
+    }
+
+    &--about{
+        background-image: url("../assets/images/about.jpg");
+        background-size: cover;
+        background-position: bottom;
+        height: 100vh;
+    }
+
     &--jaune{
         background-color: $yellow;
-        padding: 48px 0;
+        position: relative;
+
+        .container{
+            display: grid;
+            grid-template-columns: repeat(9, 1fr);
+            column-gap: 24px;
+            position: relative;
+        }
+    }
+
+    &--info{
+        height: 100vh;
+        position: relative;
+        background-color: $black;
+    }
+
+    &--contact{
+        position: relative;
+        background-color: $white;
+
+        .container{
+            display: grid;
+            grid-template-columns: repeat(9, 1fr);
+            column-gap: 24px;
+            position: relative;
+        }
+
+        .parallax{
+            grid-column: 8 / 10;
+        }
+
+        .title{
+            grid-column: 1 / 4;
+            margin: 96px 0;
+        }
+
+        p{
+            margin-top: 96px;
+            grid-column: 6 / 9;
+        }
+    }
+
+    &--email{
+        height: 100vh;
+        position: relative;
+        background-color: $white;
+
+        .container{
+            display: grid;
+            grid-template-columns: repeat(9, 1fr);
+            column-gap: 24px;
+            position: relative;
+        }
+
+        .title{
+            grid-column: 3 / 8;
+            text-align: center;
+            background-color: $white;
+            padding: 12px 0;
+        }
+    }
+}
+
+.lines{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    margin: auto;
+}
+
+.line{
+    position: absolute;
+    background-color: $black;
+    opacity: .4;
+    width: 1px;
+    top: 0;
+    height: 100%;
+
+    &--1{
+        left: 25%;
+    }
+
+    &--2{
+        left: 50%;
+    }
+
+    &--3{
+        left: 75%;
+    }
+}
+
+.eiko{
+    font-family: "Eiko", serif;
+    font-style: italic;
+    font-weight: 500;
+}
+
+.background{
+    display: block;
+    background-color: $white;
+    padding: 12px 0;
+}
+
+.svg{
+    transition: transform .3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    padding-left: 8px;
+    width: 24px;
+}
+
+.parallax{
+    height: 24vw;
+	width: 100%;
+    border-radius: 16px;
+	background-size: 110%;
+	background-position: center;
+	background-repeat: no-repeat;
+    
+    &--flo{
+        background-image: url("../assets/images/flo.jpg");
+        grid-column: 1 / 3;
+    }
+
+    &--about{
+        background-image: url("../assets/images/about.jpg");
+        grid-column: 3 / 5;
+        height: 12vw;
+    }
+
+    &--contact{
+        background-image: url("../assets/images/contact.jpg");
+    }
+
+    &--work{
+        background-image: url("../assets/images/about.jpg");
+    }
+}
+
+.form{
+    grid-column: 1 / 7;
+
+    &__group{
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    &__identity{
+        display: flex;
+        gap: 24px;
+    }
+
+    &__field{
+        position: relative;
+        width: 100%;
+        margin-bottom: 40px;
+    }
+
+    &__input{
+        font-family: inherit;
+        font-size: 2.0rem;
+        line-height: $lineheightContent;
+        color: $lightgrey;
+        width: 100%;
+        padding: 8px 0;
+        border: 0;
+        outline: 0;
+        background: none;
+        border-bottom: 1px solid $black;
+        transition: border-bottom ease-out .2s;
+
+        &:focus, &:valid{
+            border-bottom: 1px solid $lightgrey;
+        }
+    }
+}
+
+textarea{
+    resize: vertical;
+}
+
+.cursors{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    pointer-events: none;
+}
+
+.cursor{
+    background-color: $black;
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    color: $white;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    letter-spacing: 1px;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity .2s ease-out;
+}
+
+.active{
+    &--drag, &--open, &--email{
+        display: flex;
+        opacity: 1;
+    }
+}
+
+.swiper-slide{
+    &:first-child .card{
+        margin: 0 24px 0 48px;
+    }
+
+    &:last-child .card{
+        margin: 0 48px 0 24px;
+    }
+}
+
+.card{
+    margin: 0 24px;
+    border-top: 1px solid $lightgrey;
+    padding-top: 16px;
+
+    .title--medium{
+        margin-bottom: 96px;
+    }
+
+    .parallax{
+        transition-duration: .3s;
+        transition-timing-function: ease-out;
+        &:hover{
+            filter: brightness(0.8);
+        }
     }
 }
