--- a/workflow/src/styles/utils/_variables.scss
+++ b/workflow/src/styles/utils/_variables.scss
@@ -1,29 +1,33 @@
 $white: #FFF;
 $black: #000;
-$yellow: #F7B538;
+$yellow: #FAB229; //#F7B538;
 $darkgrey: #7A7A7A;
+$lightgrey: #999999;
 
 $lineheightTitle: 1;
 $lineheightContent: 1.5;
-$fontsizeImage: 1.4rem;
+$fontsizeSmall: 1.4rem;
 
-$rapportHierarchique: 1.333;
+$rapportHierarchique: 1.234;
 
 $fontsizeMobile: 1.6rem;
 $fontsizeTablet: 1.7rem;
 $fontsizeDesktop: 1.8rem;
 
-$smMobile: $fontsizeMobile * $rapportHierarchique;
-$mdMobile: $fontsizeMobile * $rapportHierarchique * $rapportHierarchique;
-$lgMobile: $fontsizeMobile * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
-$xlMobile: $fontsizeMobile * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$xsMobile: $fontsizeMobile * $rapportHierarchique;
+$smMobile: $fontsizeMobile * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$mdMobile: $fontsizeMobile * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$lgMobile: $fontsizeMobile * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$xlMobile: $fontsizeMobile * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
 
-$smTablet: $fontsizeTablet * $rapportHierarchique;
-$mdTablet: $fontsizeTablet * $rapportHierarchique * $rapportHierarchique;
-$lgTablet: $fontsizeTablet * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
-$xlTablet: $fontsizeTablet * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$xsTablet: $fontsizeTablet * $rapportHierarchique;
+$smTablet: $fontsizeTablet * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$mdTablet: $fontsizeTablet * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$lgTablet: $fontsizeTablet * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$xlTablet: $fontsizeTablet * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
 
-$smDesktop: $fontsizeDesktop * $rapportHierarchique;
-$mdDesktop: $fontsizeDesktop * $rapportHierarchique * $rapportHierarchique;
-$lgDesktop: $fontsizeDesktop * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
-$xlDesktop: $fontsizeDesktop * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$xsDesktop: $fontsizeDesktop * $rapportHierarchique;
+$smDesktop: $fontsizeDesktop * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$mdDesktop: $fontsizeDesktop * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$lgDesktop: $fontsizeDesktop * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
+$xlDesktop: $fontsizeDesktop * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique * $rapportHierarchique;
