--- a/workflow/src/styles/components/_header.scss
+++ b/workflow/src/styles/components/_header.scss
@@ -1,14 +1,33 @@
 @import 'utils/variables';
 
 .header{
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     z-index: 10;
 
-    .container{
-        padding: 0;
-        position: relative;
+    &--bg{
+        position: fixed;
+        .menu{
+            background-color: $white;
+            padding: 12px 48px;
+            animation: menu .8s $easeOutExpo;
+
+            &__page{
+                display: flex;
+                align-items: center;
+            }
+        }
+
+        .btn{
+            &--menu{
+                span{
+                    &:before, &:after {
+                        background-color: $black;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -25,32 +44,53 @@
     }
 
     img{
+        transition: filter .8s $easeOutExpo;
         width: 100%;
         border-radius: 16px;
     }
-}
 
-@keyframes menu{
-    0%{
-        transform: translateY(-100%);
-    }
-
-    100%{
-        transform: translateY(0);
+    a{
+        &:hover img{
+            filter: brightness(0.8);
+        }
     }
 }
 
 .menu{
-    margin: 48px 48px 0 48px;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    column-gap: 24px;
+    padding: 24px 48px 0 48px;
+
+    &__logo{
+        grid-column: 1 / 2;
+        display: flex;
+        align-items: center;
+        z-index: 13;
+    }
+
+    &__page{
+        grid-column: 2 / 9;
+        display: none;
+        z-index: 13;
+    }
+
+    &__btn{
+        grid-column: 9 / 10;
+        display: flex;
+        justify-content: flex-end;
+    }
 
     &__burger{
         position: absolute;
         top: 0;
         height: 100%;
         width: 100vw;
-        right: -100%;
+
+        .container{
+            padding: 0;
+            position: relative;
+        }
     }
 
     &__main{
@@ -59,30 +99,34 @@
         grid-template-columns: repeat(9, 1fr);
         column-gap: 24px;
         background-color: $black;
-        padding: 120px 48px 0 48px;
-        border-top: 1px solid $darkgrey;
+        padding-top: 96px;
+        margin: 0 48px;
         box-shadow: 0 0 12px $black;
         z-index: 12;
+        transform: translateY(-105%);
+        border-bottom: 1px solid $lightgrey;
     }
 
     &__more{
         position: absolute;
         display: grid;
-        background-color: $yellow;
+        background-color: $black;
         grid-template-columns: repeat(9, 1fr);
         column-gap: 24px;
         padding: 24px 48px;
         width: calc(100% - 96px);
         box-shadow: 0 0 12px $black;
         z-index: 11;
+        transform: translateY(-105%);
 
         p{
             grid-column: 1 / 6;
             display: flex;
             align-items: flex-end;
             font-size: $lgDesktop;
+            font-weight: 500;
             line-height: .7;
-            color: $black;
+            color: $white;
             margin: 0;
         }
 
@@ -94,7 +138,7 @@
                 gap: 48px;
         
                 a{
-                    color: $black;
+                    color: $white;
                     font-size: $fontsizeSmall;
                     text-transform: uppercase;
                     text-decoration: none;
@@ -108,7 +152,7 @@
                         height: 1px;
                         bottom: 10px;
                         left: 0;
-                        background-color: $black;
+                        background-color: $white;
                         transform: scaleX(0);
                         transform-origin: bottom right;
                         transition: transform 0.3s;
@@ -123,6 +167,16 @@
                 }
             }
         }
+    }
+}
+
+@keyframes menu{
+    0%{
+        transform: translateY(-100%);
+    }
+
+    100%{
+        transform: translateY(0);
     }
 }
 
@@ -155,63 +209,50 @@
     }
 
     &__element{
-        display: flex;
         overflow: hidden;
-        align-items: center;
-
-        &:before{
-            counter-increment: li;
-            content: counter(li, decimal-leading-zero);
-            color: $lightgrey;
-	        margin-right: 24px;
-            font-size: $fontsizeSmall;
-        }
 
         &--link{
             font-size: $smDesktop;
             font-weight: 500;
-            //line-height: $lineheightTitle;
             color: $lightgrey;
             text-decoration: none;
+            padding: 3px 0;
             position: relative;
-            overflow: hidden;
 
-            span{
-                display: block;
-                transition: transform .3s cubic-bezier(.16,1,.3,1);
-                padding-right: 48px;
-            }
-
-            span:after{
-                content: attr(data-hover);
-                color: $white;
-                font-family: "Eiko", serif;
-                font-style: italic;
-                display: block;
+            &:after {
+                content:'';
                 position: absolute;
-                top: 100%;
+                width: 8px;
+                height: 8px;
+                border-radius: 50%;
+                top: 45%;
+                right: -18px;;
+                background-color: $yellow;
+                transform: scale(0, 0);
+                transform-origin: center;
+                transition: transform .8s $easeOutExpo;
             }
 
-            &:hover{
-                span{
-                    transform: translateY(-100%);
+            &:hover {
+                &:after {
+                    transform-origin: center;
+                    transform: scale(1, 1);
                 }
             }
         }
 
         &--actif{
-            span{
-                transform: translateY(-100%);
-            }
+            color: $white;
         }
     }
 }
 
 .btn{
     &--menu{
+        display: block;
         width: 32px;
-        height: 48px;
-        z-index: 11;
+        height: 32px;
+        z-index: 13;
 
         span{
             margin: 0 auto;
@@ -224,7 +265,7 @@
                 height: 2px;
                 background-color: $white;
                 display: block;
-                transition: margin .2s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+                transition: margin .4s $easeOutExpo;
             }
 
             &:before{
@@ -253,6 +294,7 @@
         transition-delay: .3s;
 
         &:before, &:after{
+            background-color: $white;
             transition-property: margin, transform;
             transition-duration: .3s;
             transition-delay: .3s, 0;
@@ -283,11 +325,23 @@
 }
 
 body[data-menu]{
+    .btn{
+        &--menu{
+            span{
+                &:before, &:after {
+                    background-color: $white;
+                }
+            }
+        }
+    }
+
     .menu{
         &__burger{
             position: fixed;
-            top: 0;
-            right: 0%;
+        }
+
+        &__page{
+            color: $white;
         }
     }
 }
