--- a/workflow/src/styles/components/_footer.scss
+++ b/workflow/src/styles/components/_footer.scss
@@ -5,12 +5,12 @@
     color: $white;
 
     .container{
-        padding: 48px;
+        padding: 48px 24px;
     }
 
     &__top{
         display: grid;
-        grid-template-columns: repeat(9, 1fr);
+        grid-template-columns: repeat(5, 1fr);
         column-gap: 24px;
         border-bottom: 1px solid $darkgrey;
 
@@ -18,24 +18,22 @@
             padding-bottom: 48px;
         }
 
-        &--left, &--center{
-            border-right: 1px solid $darkgrey;
-        }
-
         &--left{
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-            grid-column: 1 / 3;
+            gap: 24px;
+            grid-column: 1 / 4;
+            border-right: 1px solid $darkgrey;
         }
 
         &--center{
-            grid-column: 3 / 6;
+            grid-column: 4 / 6;
         }
 
         &--right{
-            margin-top: auto;
-            grid-column: 6 / 9;
+            border-top: 1px solid $darkgrey;
+            padding-top: 48px;
+            grid-column: 1 / 6;
 
             p{
                 margin: 0;
@@ -46,8 +44,8 @@
 
     &__bottom{
         display: grid;
-        grid-template-columns: repeat(9, 1fr);
-        column-gap: 24px;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 48px 24px;
         margin-top: 24px;
     }
 
@@ -89,8 +87,10 @@
 
     &__media{
         display: flex;
+        justify-content: center;
         gap: 48px;
-        grid-column: 6 / 9;
+        grid-row: 1 / 2;
+        grid-column: 1 / 6;
 
         a{
             color: $white;
@@ -124,10 +124,90 @@
 }
 
 .copyright{
-    grid-column: 1 / 4;
+    display: flex;
+    justify-content: center;
+    grid-row: 2 / 3;
+    grid-column: 1 / 6;
     color: $white;
     text-transform: uppercase;
     font-size: $fontsizeSmall;
-    margin: auto 0;
 }
 
+@media(min-width: 650px){
+    .footer{
+        .container{
+            padding: 48px;
+        }
+
+        &__top{
+            grid-template-columns: repeat(7, 1fr);
+
+            &--left, &--center, &--right{
+                padding-bottom: 48px;
+            }
+    
+            &--left{
+                grid-column: 1 / 4;
+            }
+    
+            &--center{
+                grid-column: 4 / 8;
+            }
+    
+            &--right{
+                grid-column: 1 / 8;
+            }
+        }
+
+        &__bottom{
+            grid-template-columns: repeat(7, 1fr);
+        }
+
+        &__media{
+            justify-content: flex-start;
+            grid-column: 4 / 8;
+        }
+    }
+
+    .copyright{
+        justify-content: flex-start;
+        grid-row: 1 / 2;
+        grid-column: 1 / 4;
+    }
+}
+
+@media(min-width: 1300px){
+    .footer{
+        &__top{
+            grid-template-columns: repeat(9, 1fr);
+
+            &--left, &--center, &--right{
+                padding-bottom: 48px;
+            }
+    
+            &--left{
+                grid-column: 1 / 3;
+            }
+    
+            &--center{
+                border-right: 1px solid $darkgrey;
+                grid-column: 3 / 6;
+            }
+    
+            &--right{
+                border-top: 0;
+                padding-top: 0;
+                margin-top: auto;
+                grid-column: 6 / 9;
+            }
+        }
+
+        &__media{
+            grid-column: 5 / 10;
+        }
+    }
+
+    .copyright{
+        grid-column: 1 / 6;
+    }
+}
